@@ -179,4 +179,10 @@ object SnakemakeAPI {
             SMK_VARS_ATTEMPT
         )
     )
+
+    val ALLOWED_CALLABLE_ARGS = setOf(
+        SECTION_INPUT, SECTION_LOG, SECTION_PARAMS, SECTION_THREADS, SECTION_RESOURCES,
+        SECTION_CONDA, SECTION_VERSION, SECTION_SINGULARITY, SECTION_GROUP,
+        SnakemakeNames.SUBWORKFLOW_WORKDIR_KEYWORD, SnakemakeNames.SUBWORKFLOW_SNAKEFILE_KEYWORD
+    )
 }
