@@ -252,6 +252,17 @@
     />
 
     <localInspection
+            language="Snakemake" shortName="SmkSectionUnexpectedCallableArgsInspection"
+            enabledByDefault="true"
+            level="ERROR"
+            suppressId="SmkSectionUnexpectedCallableArgs"
+            bundle="SnakemakeBundle"
+            groupKey="INSP.GROUP.snakemake"
+            key="INSP.NAME.section.unexpected.callable.args"
+            implementationClass="com.jetbrains.snakecharm.inspections.SmkSectionUnexpectedCallableArgsInspection"
+    />
+
+    <localInspection
             language="Snakemake" shortName="SmkSubworkflowRedeclarationInspection"
             enabledByDefault="true"
             level="WEAK WARNING"
