@@ -43,6 +43,10 @@ INSP.NAME.section.duplicated.args=Duplicated argument
 INSP.NAME.section.duplicated.args.message=This argument has been already added to ''{0}'' section.
 INSP.INTN.remove.duplicated.arg=Remove duplicated argument
 
+# SmkSectionUnexpectedCallableArgsInspection
+INSP.NAME.section.unexpected.callable.args=Unexpected callable argument
+INSP.NAME.section.unexpected.callable.args.message=Section ''{0}'' does not support callable arguments
+
 # SmkSubworkflowRedeclarationInspection
 INSP.NAME.subworkflow.redeclaration=Only last subworkflow with the same name will be executed
 
