@@ -1,0 +1,6 @@
+<html>
+<body>
+Only following sections expect callable arguments: input, log, params, threads, resources, conda, version,
+singularity, group, workdir, snakefile.
+</body>
+</html>
