@@ -12,6 +12,7 @@ Features:
 - Inspection: Comma in the end of section arg list isn't needed (see #255)
 - Inspection: Warn user if rule from 'rulesorder' isn't available in current or included files (see #254)
 - Inspection: Warn about string arguments split on several lines (see #259)
+- Inspection: Warn users if they have callable arguments in sections that does not expect it (see #198)
 
 Fixed:
 - Completion does not suggest top-level keywords in comments (see #178)
